--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "nuxt-firebase-samples",
+  "name": "realtime-questionnaire-nuxt",
   "version": "1.0.0",
-  "description": "NuxtPractices",
-  "author": "fukumura",
+  "description": "リアルタイムアンケート",
+  "author": "mpg-akinori-fukumura",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "@nuxtjs/dotenv": "^1.4.1",
+    "chart.js": "^2.9.3",
+    "firebase": "^7.4.0",
+    "firebaseui": "^4.3.0",
+    "nuxt": "^2.0.0",
+    "vue-chartjs": "^3.5.0",
+    "vuexfire": "^3.2.0-alpha.0"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.0.0",
-    "@nuxtjs/eslint-config": "^1.0.1",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2"
+    "@nuxtjs/vuetify": "^1.9.0"
   }
 }
