--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/timegrid": "^4.3.0",
+    "@fullcalendar/vue": "^4.3.1",
     "@nuxtjs/dotenv": "^1.4.1",
     "chart.js": "^2.9.3",
     "firebase": "^7.4.0",
